--- a/Client/src/style/LogIn.css
+++ b/Client/src/style/LogIn.css
@@ -6,18 +6,14 @@
 }
 
 body {
-    background-color: #f9f9f9;
+    background-color: #ffffff;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
 }
 
-input {
-    color: rgb(81, 79, 79);
-  }
-
-h2{
+h2 {
     margin-top: 23vh;
 }
 
@@ -31,7 +27,7 @@ h2{
 }
 
 .entryForm {
-    background-color: rgb(235, 235, 235);
+    background-color: rgb(255, 255, 255);
     border-radius: 8px;
     padding: 2rem;
     box-shadow: 0 0.3vw 0.7vw rgba(0, 0, 0, 0.1);
@@ -44,21 +40,26 @@ h2{
     width: 100%;
     padding: 10px;
     margin: 10px 0;
-    border: 1px solid #ddd;
+    border: 1px solid #ffffff;
     border-radius: 4px;
     font-size: 16px;
 }
 
+.entryForm input {
+  color: #4c4b4b !important;
+}
+
 .entryForm input:focus {
-    border-color: #3390ad;
+    border-color: #5fa79b;
     outline: none;
 }
 
 .entryForm button {
     width: 100%;
     padding: 10px;
+    margin: auto;
     margin-top: 10px;
-    background-color: #3390ad;
+    background-color: #5fa79b;
     color: rgb(113, 111, 111);
     border: none;
     border-radius: 4px;
@@ -68,7 +69,7 @@ h2{
 }
 
 .entryForm button:hover {
-    background-color: #3390ad;
+    background-color: #5fa79b;
 }
 
 .entryForm button:focus {
