--- a/Client/src/style/Register.css
+++ b/Client/src/style/Register.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
+    /* overflow-y: auto; */
 }
 
 body {
@@ -42,6 +43,7 @@ h2 {
     width: 100%;
     max-width: 400px;
     text-align: center;
+    overflow-y: auto;
 }
 
 .entryForm input {
@@ -90,7 +92,6 @@ h2 {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    /* height: 100vh; */
     width: 100vw;
     position: absolute;
     right: 0;
