--- a/Client/src/style/Register.css
+++ b/Client/src/style/Register.css
@@ -6,6 +6,7 @@
 }
 
 body {
+    overflow:auto;
     background-color: #ffffff;
     display: flex;
     justify-content: center;
@@ -26,6 +27,7 @@ h2 {
 }
 
 .entryContainer {
+    overflow:auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -86,11 +88,11 @@ h2 {
 }
 
 .back-ground-img {
+    overflow:auto;
     background-image: url('../img/bg.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    /* height: 100vh; */
     width: 100vw;
     position: absolute;
     right: 0;
