--- a/Client/src/style/Profile.css
+++ b/Client/src/style/Profile.css
@@ -5,14 +5,10 @@
     font-family: Arial, sans-serif;
 }
 
+html,
 body {
-    background-color: #ffffff;
-    font-family: Arial, sans-serif;
-    min-height: 100vh;
-}
-
-h2 {
-    margin-top: 23vh;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 .entryForm button.typeBtn {
@@ -24,7 +20,7 @@ h2 {
 }
 
 .entryContainer {
-    /* display: block; */
+    position: relative;
     justify-content: center;
     align-items: flex-start;
     padding: 5vh 0;
@@ -33,12 +29,34 @@ h2 {
 .entryForm {
     background-color: rgb(255, 255, 255);
     border-radius: 8px;
-    padding: 2rem;
     box-shadow: 0 0.3vw 0.7vw rgba(0, 0, 0, 0.1);
     width: 100%;
     max-width: 400px;
     text-align: center;
-    overflow-y: auto;
+}
+
+.entryForm select {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ffffff;
+    border-radius: 4px;
+    font-size: 16px;
+    background-color: rgb(202, 199, 199);
+    appearance: none;
+    color: #050505 !important;
+}
+
+.entryForm select:focus {
+    border-color: #5fa79b;
+    outline: none;
+}
+
+.preference input[type="checkbox"],
+.preference input[type="radio"] {
+    position: absolute;
+    left: 5vw;
+    accent-color: white;
+    background-color: white;
 }
 
 .entryForm input {
