patient profile work

--- a/Client/src/style/ContactProfile.css
+++ b/Client/src/style/ContactProfile.css
@@ -156,3 +156,9 @@ input[type="date"] {
     position: absolute;
     left: 5vw;
 }
+
+.entryForm select {
+    appearance: auto;
+    -webkit-appearance: menulist;
+    -moz-appearance: menulist;
+}
