--- a/Client/src/style/Requests.css
+++ b/Client/src/style/Requests.css
@@ -112,12 +112,8 @@
     text-align: center;
 }
 
-.requests-table tr:nth-child(even):not(:first-child) {
-    background-color: #f9f9f9;
-}
-
-.requests-table tr:hover {
-    background-color: #f1f1f1;
+.requests-table tbody tr {
+    background-color: #ffffff;
 }
 
 .requests-table td:last-child {
