--- a/Client/src/style/Add.css
+++ b/Client/src/style/Add.css
@@ -63,3 +63,30 @@ form {
 .add-form form button:hover {
     background-color: #4a8d80;
 }
+
+@media screen and (max-width: 768px) {
+    .form-container,
+    .add-form form {
+        padding: 5vw;
+        margin-top: 5vw;
+        border-radius: 8px;
+        max-width: 90vw;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .form-container h2 {
+        font-size: 1.3rem;
+    }
+
+    .add-form form input,
+    .add-form form select {
+        font-size: 14px;
+        padding: 8px;
+    }
+
+    .add-form form button {
+        width: 100%;
+        padding: 0.8rem;
+        font-size: 16px;
+    }
+}
