--- a/Client/src/style/App.css
+++ b/Client/src/style/App.css
@@ -274,3 +274,116 @@ summary {
 .control-section button:hover {
   background-color: #4d9489;
 }
+
+@media screen and (max-width: 768px) {
+  #root {
+    padding: 1rem;
+  }
+
+  .header {
+    flex-direction: column;
+    height: auto;
+    padding: 1vh 2vw;
+    text-align: center;
+  }
+
+  .logo {
+    height: 12vh;
+    margin: 1vh auto;
+    position: static;
+  }
+
+  .header ul {
+    flex-direction: column;
+    gap: 2vh;
+    align-items: center;
+  }
+
+  .header ul a {
+    font-size: 1rem;
+  }
+
+  .fullName {
+    position: static;
+    transform: none;
+    font-size: 1.2rem;
+    margin-top: 1vh;
+  }
+
+  .header .right,
+  .header .left {
+    position: static;
+    flex-direction: column;
+    gap: 1vh;
+  }
+
+  .container {
+    margin-top: 20vh;
+    padding: 1rem;
+  }
+
+  .control {
+    flex-direction: column;
+    gap: 1vh;
+    padding: 1vh 2vw;
+    position: static;
+    margin-top: 2vh;
+  }
+
+  .control button,
+  .control select,
+  .control input {
+    width: 100%;
+    font-size: 16px;
+  }
+
+  .info {
+    position: static;
+    width: 100%;
+    height: auto;
+    border-right: none;
+    border-bottom: 1px solid black;
+    padding: 1vh;
+    text-align: center;
+  }
+
+  .info-title {
+    font-size: 1.2rem;
+    margin-top: 2vh;
+    text-align: center;
+  }
+
+  summary {
+    font-size: 1rem;
+  }
+
+  .patientLink ul a {
+    font-size: 0.9rem;
+  }
+
+  .control-grid {
+    display: block;
+    margin-top: 2vh;
+  }
+
+  .control-section {
+    margin-bottom: 2vh;
+  }
+
+  .control-section input,
+  .control-section select,
+  .control-section button {
+    height: 45px;
+    font-size: 1rem;
+  }
+
+  .addBtn {
+    margin: 1vh auto;
+    width: 90%;
+    font-size: 1rem;
+  }
+
+  .todo-checkbox {
+    width: auto;
+  }
+}
