--- a/Client/src/style/Profile.css
+++ b/Client/src/style/Profile.css
@@ -11,7 +11,7 @@ body {
     overflow-y: hidden;
 }
 
-h2{
+h2 {
     margin-top: 0.05vw;
 }
 
@@ -155,4 +155,63 @@ input[type="date"] {
 .preference input[type="radio"] {
     position: absolute;
     left: 5vw;
+}
+
+@media screen and (max-width: 768px) {
+    .entryContainer {
+        padding: 2vh 1rem;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .entryForm {
+        margin-top: 3vh;
+        padding: 1.5rem 1rem;
+        width: 90%;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .entryForm input,
+    .entryForm select,
+    .entryForm button {
+        font-size: 1rem;
+        padding: 12px;
+    }
+
+    .entryForm button {
+        margin-top: 1rem;
+    }
+
+    h2 {
+        font-size: 1.4rem;
+        margin-top: 1rem;
+    }
+
+    .preference {
+        padding: 1rem;
+        font-size: 0.95rem;
+    }
+
+    .preference div {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .preference input[type="checkbox"],
+    .preference input[type="radio"] {
+        position: static;
+        margin-right: 0.5rem;
+        margin-bottom: 0.5rem;
+    }
+
+    .back-ground-img {
+        background-position: center;
+        background-size: cover;
+        position: fixed;
+        top: 0;
+        right: 0;
+        height: 100vh;
+        width: 100vw;
+        z-index: -1;
+    }
 }
